Code optimization and cleaning